[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
figment = { version = "0.10.10", features = ["serde_json"] }
mail-send = "0.4.0"
postgres = "0.19.7"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["serde_json", "json"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
serde = "1.0.188"
sqlx = { version = "0.7.1", features = ["migrate"] }
toml = "0.7.6"
